Added some comments, made so that test players are not added again if run again